nit, fixing text alignment

--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ p {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        text-align: center;
     }
 }
 
@@ -111,6 +113,8 @@ footer {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        text-align: center;
     }
 }
 
